// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should mount an open modal 1`] = `
<ModalExample>
  <div>
    <Modal
      ariaLabel="Terra Modal"
      classNameModal={null}
      classNameOverlay={null}
      closeOnEsc={true}
      closeOnOutsideClick={true}
      isFocused={true}
      isFullscreen={false}
      isOpen={true}
      isScrollable={false}
      onRequestClose={[Function]}
      role="document"
    >
      <Portal
        isOpened={true}
      >
        <ModalContent
          ariaLabel="Terra Modal"
          classNameModal={null}
          classNameOverlay={null}
          closeOnOutsideClick={true}
          isFocused={true}
          isFullscreen={false}
          isScrollable={false}
          onRequestClose={[Function]}
          role="document"
        >
          <FocusTrap
            _createFocusTrap={[Function]}
            active={true}
            focusTrapOptions={Object {}}
            paused={false}
            tag="div"
          >
            <div>
              <ModalOverlay
                className={null}
                onClick={[Function]}
              >
                <div
                  className="overlay"
                  onClick={[Function]}
                />
              </ModalOverlay>
              <div
                aria-label="Terra Modal"
                className="modal fixed-size"
                role="document"
                tabIndex="0"
              >
                <div>
                  <h1>
                    Terra Modal
                  </h1>
                  <button
                    onClick={[Function]}
                  >
                    Close Modal
                  </button>
                </div>
              </div>
            </div>
          </FocusTrap>
        </ModalContent>
      </Portal>
    </Modal>
    <button
      onClick={[Function]}
    >
      Open Modal
    </button>
  </div>
</ModalExample>
`;

exports[`should shallow an open modal 1`] = `
<div>
  <Modal
    ariaLabel="Terra Modal"
    classNameModal={null}
    classNameOverlay={null}
    closeOnEsc={true}
    closeOnOutsideClick={true}
    isFocused={true}
    isFullscreen={false}
    isOpen={true}
    isScrollable={false}
    onRequestClose={[Function]}
    role="document"
  >
    <div>
      <h1>
        Terra Modal
      </h1>
      <button
        onClick={[Function]}
      >
        Close Modal
      </button>
    </div>
  </Modal>
  <button
    onClick={[Function]}
  >
    Open Modal
  </button>
</div>
`;
